# SAM

./: .gitignore  CMakeLists.txt  a.sam  makefile
DOCS/: README.md  instr_set.txt  registers.txt
examples/: func.sasm  ifel.sasm  mc1.txt  mc2.sam  mc3.txt  sasm1.sasm  sasm1.txt  sasm1_for_3.sasm  sasm2.sasm  sasm2.txt  sasm2_for_3.sasm  sasm3.sasm
src/sasm/: assembler.cpp  assembler.hpp  lexer.cpp  lexer.hpp  main.cpp  pars_err_rep.cpp  parser.cpp  parser.hpp  parser_utils.cpp  token_container.cpp  tokenizer.cpp
src/vm/: main.c  main_util.c  main_util.h  vm.c  vm.h
tests/: add.sasm  arith.c  logic.c  mach_code1.txt  mc1.txt  mc2.txt  misc.c  parser_test.cpp  push_100.sasm  push_100_parsing.sasm  test1.c  tests.h  tokenizer_test.cpp
